# tkinter-file-manager

./: README.md  pyproject.toml
tests/: test_file_operation.py
tkinter_file_manager/: cli.py  main.py
tkinter_file_manager/core/: file_operations.py
tkinter_file_manager/gui/: event_bus.py  main_window.py
tkinter_file_manager/gui/components/: file_list.py
tkinter_file_manager/gui/utils/: icon_infos.py  icon_utils.py  ui_button.py
tmp/: main_window.py
